--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,5 +13,25 @@
     </ion-toolbar>
   </ion-header>
 
+
+  <ion-card class="itemCompra">
+    <img src="https://static.clubeextra.com.br/img/uploads/1/351/590351.png?type=product"/>
+    <ion-card-header class="itemHeader">
+      <ion-card-subtitle class="nomeProduto">Saco de Arroz</ion-card-subtitle>
+      <ion-card-title class="precoProduto">RS 12,00</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content class="lojaProduto">
+      Daft
+    </ion-card-content>
+  </ion-card>
+  
+
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
+
+
+
+
+
+
