--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -1,3 +1,27 @@
 ion-content ion-toolbar {
   --background: translucent;
 }
+
+.itemCompra {
+  width: 30%;
+}
+
+.itemHeader {
+  padding: 5px 10px;
+}
+
+.nomeProduto {
+ font-size: 10px;
+}
+
+.precoProduto {
+  font-size: 11px;
+}
+
+.lojaProduto{
+  font-size: 14px;
+  padding-left: 10px;
+  padding-right: 30px;
+  padding-top: 0px;
+  padding-bottom: 10px;
+}
