--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -32,3 +32,23 @@ ion-content ion-toolbar {
   padding-top: 0px;
   padding-bottom: 10px;
 }
+.botaocarrinho{
+  font-size: 12px;
+  text-transform: lowercase;
+  justify-content: space-between;
+  background-color: #6810dc99!important;
+}
+
+.toolbar {
+ display: flex;
+ padding: 0px 20px!important; 
+}
+
+.carrinhoIcone{
+  font-size: 28px;
+}
+
+.titulo{
+  padding: 0px;
+}
+
