--- a/src/app/tab1/carrinho/carrinho.component.scss
+++ b/src/app/tab1/carrinho/carrinho.component.scss
@@ -14,3 +14,33 @@
     font-size: 30px!important;
     color: red;
    }
+
+   .resumo-compra {
+    bottom: 0px;
+    // background-color: #59e6ff;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 5px 10px;
+    padding: 3px 10px;
+   }
+    
+   .resumo-compra {
+    margin: 0px;
+   }
+    
+   .total-preco {
+    justify-content: end;
+    text-align: end;
+   }
+    
+   .resumo-total {
+    font-size: 18px;
+    margin: 0px;
+   }
+    
+   .resumo-preco {
+    font-size: 20px;
+    margin: 0px;
+    font-weight: bold;
+   }
