cirando botao comprar

--- a/src/app/tab1/carrinho/carrinho.component.html
+++ b/src/app/tab1/carrinho/carrinho.component.html
@@ -27,7 +27,7 @@
 <ion-footer style="padding: 10px;">
   <ion-card class="resumo-compra">
   <div>
-  <ion-button color="success">Comprar</ion-button>
+  <ion-button (click)="comprar()" color="success">Comprar</ion-button>
   </div>
   <div class="total-preco">
   <p class="resumo-total"> Total </p>
