arrumando tamanho do imagem do produto

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,7 +19,9 @@
 
   <div class="vitrine">
     <ion-card class="itemCompra" *ngFor="let produto of produtos">
-      <img src="{{produto.imagem}}" />
+      <div class="container-imagem-produto">
+        <img class="imagem-produto"src="{{produto.imagem}}" />
+      </div>
       <ion-card-header class="itemHeader">
         <ion-card-subtitle class="nomeProduto">{{produto.nome}}</ion-card-subtitle>
         <ion-card-title class="precoProduto">RS {{produto.preco}}</ion-card-title>
