botao de ir para Detalhes

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,7 +6,7 @@
 
     <div class="container-pedido" *ngFor="let pedido of pedidos">
         <p class="data">{{ pedido.dataTexto }}</p>
-        <ion-card>
+        <ion-card (click)="irParaDetalhesPedido(pedido)">
             <ion-card-header>
                 <ion-item>
                     <ion-avatar slot="start">
