Pedido dinamico + resolucao de bug

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -5,7 +5,7 @@
 <ion-content>
 
     <div class="container-pedido" *ngFor="let pedido of pedidos">
-        <p class="data">{{ pedido.dataTexto }}</p>
+        <p class="data">{{ pedido.data}}</p>
         <ion-card (click)="irParaDetalhesPedido(pedido)">
             <ion-card-header>
                 <ion-item>
