resolvendo bug do toolbar

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -9,11 +9,11 @@
 </ion-header>
 
 <ion-content>
-  <ion-header collapse="condense">
+  <!-- <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Tab 1</ion-title>
     </ion-toolbar>
-  </ion-header>
+  </ion-header> -->
 
   <ion-searchbar (ionChange)="teclaDigita($event)"></ion-searchbar>
 
