--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -42,6 +42,7 @@ ion-content ion-toolbar {
 .toolbar {
  display: flex;
  padding: 0px 20px!important; 
+ flex-direction: row-reverse;
 }
 
 .carrinhoIcone{
